--- a/angular.json
+++ b/angular.json
@@ -18,9 +18,15 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+             
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+                   {
+                    "glob": "_redirects",
+                    "input": "src",
+                    "output": "/"
+                   }
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
@@ -28,6 +34,7 @@
             ],
             "scripts": []         
           },
+          
           "configurations": {
             "production": {
               "budgets": [
